# EmbeddedRingBuffer

./: .clang-format  .gitignore  Block.h  CMakeLists.txt  LICENSE.txt  README.md  RingBuffer.h  main.cpp
include/: Block.h  RingBuffer.h
tests/: README.md  ReadWrite_Test2.cpp  test_0.cpp  test_1.cpp  test_2.cpp
